// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
import storageAdapter_constructor from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testAdapter.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const storageAdapter_imports = {  }
const storageAdapter_options = {
  \\"url\\": \\"http://test.test\\"
}
const storageAdapter = constructorBindFunction.bind(null,
      storageAdapter_constructor,
      storageAdapter_options,
      storageAdapter_imports
    )
    Object.assign(storageAdapter, storageAdapter_constructor)
    
export default storageAdapter
"
`;

exports[`config with process.env works correctly 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value
const storageAdapter_constructor = ((moduleOrFile) => {
  return interopRequireDefault(__non_webpack_require__(moduleOrFile)).default
})((((first, second) => (first != null ? first : second))(process.env[\\"STORAGE_ADAPTER\\"], null)))
const storageAdapter_imports = {  }
const storageAdapter_options = {
  \\"url\\": (((first, second) => (first != null ? first : second))(process.env[\\"STORAGE_OPTIONS_URL\\"], null))
}
const storageAdapter = constructorBindFunction.bind(null,
      storageAdapter_constructor,
      storageAdapter_options,
      storageAdapter_imports
    )
    Object.assign(storageAdapter, storageAdapter_constructor)
    
export default storageAdapter
"
`;
